--- a/docs/manual/constant-value-checker.tex
+++ b/docs/manual/constant-value-checker.tex
@@ -336,13 +336,13 @@ manual analysis.
 
 \sectionAndLabel{Strings can be null in concatenations}{null-strings-concats}
 
-The definition of \refqualclass{common/value/qual}{StringVal} says that an
-expression of type \code{@StringVal(``a'', ``b'')} evaluates to one of the values
-``a'', ``b'', or null. However, Java converts a String that is null to “null”
-when that String is used in a String concatenation expression. Typically,
-the Value Checker does not consider this fact. The
-\code{-AnullStringsConcatenation} command-line option makes the checker more
-sound by assuming that all objects can be null. Only String literals,
+The definition of \<@StringVal> says that an expression of type
+\<\refqualclass{common/value/qual}{StringVal}("a", "b")> evaluates to one of
+the values \<"a">, \<"b">, or \<null>. However, Java converts a String that
+is null to ``null'' when that String is used in a String concatenation
+expression. Typically, the Value Checker does not consider this fact.
+The \code{-AnullStringsConcatenation} command-line option makes the checker
+more sound by assuming that all objects can be null. Only String literals,
 primitive types, and compile-time constants are considered non-null.
 Figure~\ref{fig-null-strings-concat} gives an example of behavior
 with and without the \code{-AnullStringsConcatenation} option.
