--- a/docs/manual/constant-value-checker.tex
+++ b/docs/manual/constant-value-checker.tex
@@ -349,8 +349,8 @@ concatenation, it expands to \<"a"> or \<"b"> but not \<"null">.
 
 The \code{-AnullStringsConcatenation} command-line option makes
 the checker assume that any value (other than primitive types and
-compile-time constant strings) may be null.  (This is
-conservative, but it is sound.)
+compile-time constant strings) may be null.  It ignores Nullness Checker
+annotations. (This behavior is conservative, but it is sound.)
 Without the command-line argument, the type of ``\<x + "c">'' is
 \<@StringVal("ac", "bc") String>.
 With the command-line argument, the type of ``\<x + "c">'' is
