--- a/docs/manual/constant-value-checker.tex
+++ b/docs/manual/constant-value-checker.tex
@@ -334,9 +334,30 @@ value that is not in its \<@IntRange> qualifier.  You should either accept
 that possibility, or verify the lack of overflow using some other tool or
 manual analysis.
 
+\sectionAndLabel{Strings can be null in concatenations}{null-strings-concats}
+
+By default, the Constant Value Checker is unsound with respect to string
+concatenation.  The \code{-AnullStringsConcatenation} command-line option
+eliminates this unsoundness, though it may lead to false positive warnings.
+
+Consider a variable declared as
+\<\refqualclass{common/value/qual}{StringVal}("a", "b") String x;>.
+At run time, \<x> evaluates to one of the values \<"a">, \<"b">, or
+\<null>.  By default, the Constant Value
+Checker unsoundly assumes that when such a value is used in string
+concatenation, it expands to \<"a"> or \<"b"> but not \<"null">.
+
+The \code{-AnullStringsConcatenation} command-line option makes
+the checker assume that any value (other than primitive types and
+compile-time constant strings) may be null.  It ignores Nullness Checker
+annotations. (This behavior is conservative, but it is sound.)
+Without the command-line argument, the type of ``\<x + "c">'' is
+\<@StringVal("ac", "bc") String>.
+With the command-line argument, the type of ``\<x + "c">'' is
+\<@StringVal("ac", "bc", "nullc") String>.
 
 %%  LocalWords:  UnknownVal StringValue BottomVal astub Astubs IntRange
-%  LocalWords:  StaticallyExecutable BoolVal IntVal DoubleVal StringVal
+%%  LocalWords:  StaticallyExecutable BoolVal IntVal DoubleVal StringVal
 %%  LocalWords:  classpath AreportEvalWarns ArrayLen ArrayLenRange casted
-%  LocalWords:  qual AignoreRangeOverflow MinLen PolyValue GTENegativeOne
-%%  LocalWords:  staticallyexecutable
+%%  LocalWords:  qual AignoreRangeOverflow MinLen PolyValue GTENegativeOne
+%%  LocalWords:  staticallyexecutable concats AnullStringsConcatenation
