--- a/docs/manual/generics.tex
+++ b/docs/manual/generics.tex
@@ -627,7 +627,7 @@ already provides the needed functionality.
 that is declared to take a \<String> parameter can also be called on an
 \<@Interned String> argument.
 
-%% TODO: Polymorphic qualifiers such as do not yet take an optional argument.
+%% TODO: Polymorphic qualifiers do not yet take an optional argument.
 % PolyAll in the section below should be changed to any poly qualifier.
 %
 % \subsectionAndLabel{Multiple instances of polymorphic qualifiers (the index argument)}{qualifier-polymorphism-multiple-instances}
