Use JDK instead of Java,
so it's clear that this isn't about source/target level

--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -454,7 +454,7 @@ Different arguments to \<javac> are required for Java 8
 (Section~\ref{java8-install}) and for Java 9+ (Section~\ref{java11-install}).
 
 
-\subsectionAndLabel{Java 8}{java8-install}
+\subsectionAndLabel{JDK 8}{java8-install}
 
 This section shows what arguments to pass to javac to run the Checker
 Framework, if you are using JDK 8.
@@ -511,7 +511,7 @@ source code is Java 8 and that Java 8 bytecode is created.
 \end{enumerate}
 
 
-\subsectionAndLabel{Java 11}{java11-install}
+\subsectionAndLabel{JDK 11}{java11-install}
 
 This section shows what arguments to pass to javac to run the Checker Framework using JDK 11.  These
 instructions should work on JDK 9 or later, but we only test with JDK 11.
