Fixed final step of android-gradle

--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -135,7 +135,7 @@ gradle.projectsEvaluated {
 
 \item To run the checkers, build using the \<checkTypes> variant:
 \begin{Verbatim}
-gradlew checkTypes
+gradlew assembleCheckTypes
 \end{Verbatim}
 
 \end{enumerate}
