--- a/docs/manual/contributors.tex
+++ b/docs/manual/contributors.tex
@@ -29,6 +29,8 @@ Felipe R. Monteiro,
 Gautam Korlam,
 Google Inc.\ (via @wmdietlGC),
 Haaris Ahmed,
+Heath Borders,
+Jakub Vr\'ana,
 Javier Thaine,
 Jeff Luo,
 Jenny Xiang,
@@ -42,6 +44,7 @@ Kartikeya Goswami,
 Kivanc Muslu,
 Konstantin Weitz,
 Liam Miller-Cushon,
+Lian Sun,
 Luqman Aden,
 L\'azaro Clapp,
 Mahmood Ali,
