Instructions for annotating the JDK

--- a/docs/manual/advanced-features.tex
+++ b/docs/manual/advanced-features.tex
@@ -1523,4 +1523,5 @@ class @Marsupial-Animal {
 % LocalWords:  AuseDefaultsForUncheckedcode EnsuresKeyFor EnsuresKeyForIf
 % LocalWords:  EnsuresLockHeld EnsuresLockHeldIf FieldInvariant fieldA
 % LocalWords:  fieldB myMethod SomeType runtime typedefs signedness
-%%  LocalWords:  Signedness MonotonicNonNull
+%%  LocalWords:  Signedness MonotonicNonNull UpperBoundFor
+% LocalWords:  getTypeDeclarationBounds identityHashCode
