--- a/docs/manual/annotating-libraries.tex
+++ b/docs/manual/annotating-libraries.tex
@@ -326,6 +326,14 @@ section describes the latter approach.
 It assumes that you have already followed the instructions for building the
 Checker Framework from source (Section~\ref{build-source}).
 
+Because there are two versions of the annotated JDK, you need to write your
+annotations in two places.
+
+For \textbf{JDK 11}, edit files in repository \url{https://github.com/typetools/jdk}.
+That is all you need to do.
+
+The rest of this section gives instructions for \textbf{JDK 8}.
+
 If you are adding annotations to an existing annotated JDK, then you only
 need to follow the last two steps.
 
