--- a/docs/manual/troubleshooting.tex
+++ b/docs/manual/troubleshooting.tex
@@ -709,17 +709,27 @@ Section~\ref{stub}.
 
 If the library is annotated but has some incorrect or missing annotations,
 then please open a pull request that adds the annotations.
-You can find the annotated source for non-JDK libraries in
-\url{https://github.com/typetools/}.
-You can find the annotated JDK source in the
-\ahref{https://github.com/typetools/checker-framework}{Checker Framework
-  GitHub repository}, either in subdirectories of
-\ahref{https://github.com/typetools/checker-framework/tree/master/checker/jdk}{\<checker/jdk>}
-or in files named \<jdk.astub> in the checker's implementation directory.
-
-If the library is not annotated at all, you can fork it, add annotations,
-and propose that your annotated version be moved into
-\url{https://github.com/typetools/}.
+\begin{itemize}
+\item
+  Non-JDK libraries:  You can find the annotated source in
+  \url{https://github.com/typetools/}.
+  If the library does not exist there, then it has no annotations yet.
+  You can fork it, add annotations,
+  and propose that your annotated version be moved into
+  \url{https://github.com/typetools/}.
+\item
+  JDK:  You need to open two pull requests, because there are two versions of the
+  annotated JDK.
+  \begin{itemize}
+  \item JDK 8: The annotated JDK source is in the
+    \ahref{https://github.com/typetools/checker-framework}{Checker Framework
+      GitHub repository}, either in a subdirectory of
+    \ahref{https://github.com/typetools/checker-framework/tree/master/checker/jdk}{\<checker/jdk>}
+    or in files named \<jdk.astub> in the checker's implementation directory.
+  \item
+    JDK 11: The annotated JDK source is in \url{https://github.com/typetools/jdk}.
+  \end{itemize}
+\end{itemize}
 
 For either approach, please see \chapterpageref{annotating-libraries} for
 tips about writing library annotations.
@@ -980,7 +990,8 @@ To save time, by default the CI jobs download a pre-built version of
 the JDK rather than building the JDK from the sources in the Checker
 Framework repository.  This means that if you make a change to the
 annotated JDK, your tests will fail.
-[TODO: Explain how to deal with this issue:]
+To fix your tests, follow the instructions at
+\url{https://github.com/typetools/annotated-libraries}.
 
 
 \subsubsectionAndLabel{Debugging continuous integration builds}{building-ci-debug}
