--- a/docs/manual/troubleshooting.tex
+++ b/docs/manual/troubleshooting.tex
@@ -973,7 +973,7 @@ then we recommend that you enable CI builds,
 so that you learn quickly of any errors that creep into your fork.
 
 Follow the
-\ahref{https://docs.microsoft.com/en-us/azure/devops/pipelines/create-first-pipeline}{Azure
+\ahref{https://docs.microsoft.com/en-us/azure/devops/pipelines/create-first-pipeline?view=azure-devops}{Azure
   Pipelines getting started directions}.
 
 To save time, by default the CI jobs download a pre-built version of
