--- a/docs/manual/generics.tex
+++ b/docs/manual/generics.tex
@@ -4,8 +4,9 @@
 This chapter describes support for Java generics (also known as
 ``parametric polymorphism'') and polymorphism over type qualifiers.
 
-Section~\ref{qualifier-polymorphism} describes support for polymorphism over
-type qualifiers.
+Section~\ref{method-qualifier-polymorphism} describes support for polymorphism over
+type qualifiers for methods. Section~\ref{class-qualifier-polymorphism} describes
+support for polymorphism over type qualifiers for classes.
 
 
 \sectionAndLabel{Generics (parametric polymorphism or type polymorphism)}{generics}
@@ -504,7 +505,8 @@ public static void addNumbers(List<? super @SignednessBottom Integer> list) { ..
 \end{Verbatim}
 
 
-\sectionAndLabel{Qualifier polymorphism}{qualifier-polymorphism}
+\sectionAndLabel{Qualifier polymorphism for methods}{method-qualifier-polymorphism}
+%\label{qualifier-polymorphism}
 
 The Checker Framework supports type \emph{qualifier} polymorphism for
 methods, which permits a single method to have multiple different qualified
@@ -516,7 +518,7 @@ To \emph{use} a polymorphic qualifier, just write it on a type.
 For example, you can write \<@PolyNull> anywhere in a method that you would write
 \<@NonNull> or \<@Nullable>.
 A polymorphic qualifier can be used in a method signature or body.
-It may not be used on a class or field.
+It may not be used on a class. (It may be used on fields, see Section~\ref{class-qualifier-polymorphism}.)
 
 A method written using a polymorphic qualifier conceptually has multiple
 versions, somewhat like the generics feature of Java or a template in C++.
@@ -852,6 +854,92 @@ type-check) than writing just
 \begin{Verbatim}
   void m(@Nullable Object obj)
 \end{Verbatim}
+
+\sectionAndLabel{Classes with implicit qualifier parameters}{class-qualifier-polymorphism}
+
+The Checker Framework supports type \emph{qualifier} polymorphism for classes.  This is similar to
+Java's generic classes, but is used in situations where you cannot use Java generics.
+
+To add a qualifier parameter to a class, annotate its declaration with \refqualclass{framework/qual}{HasQualifierParameter}.
+
+\begin{Verbatim}
+@HasQualifierParameter(Tainted.class)
+class StringBuffer { ... }
+\end{Verbatim}
+
+\<@HasQualifierParameter> analogizes StringBuffer to a
+generic collection.  A qualifier on a use of StringBuffer itself is treated as
+appearing both on the StringBuffer and on its conceptual type argument.  That
+is:\\
+\begin{tt}
+  @Tainted StringBuffer $\approx$ @Tainted Collection<@Tainted Character>\\
+  @Untainted StringBuffer $\approx$ @Untainted Collection<@Untainted Character>
+\end{tt}
+
+Also, like a generic collection, invariant subtyping is used for occurrences of
+a type with a qualifier parameter:  no two occurrences of the type with
+different qualifiers have a subtyping relationship.
+
+In a type cast, if both the cast type and the type of casted expression have
+qualifier parameters, and if the qualifiers on the types are not equivalent,
+then the checker will issue an \<invariant.cast.unsafe> error.
+
+\subsectionAndLabel{Using class qualifier parameters in method signatures}{class-qual-param-method}
+
+In classes with class qualifier parameters, a formal parameter type should
+sometimes have the same qualifier as the class qualifier parameter.  To express
+this, annotate both the receiver type and the parameter type with the
+polymorphic qualifier for the type system. For example,
+\begin{Verbatim}
+@@HasQualifierParameter(Tainted.class)
+class Buffer {
+  void append(@PolyTainted Buffer this, @PolyTainted String s) { ... }
+}
+\end{Verbatim}
+Because \<@PolyTainted> applies to a type with a qualifier parameter, then all
+other uses of \<@PolyTainted> are instantiated to the instantiation of
+\<@PolyTainted>.
+
+\subsectionAndLabel{Using class qualifier parameters in the type of a field}{class-qual-param-field}
+
+In classes with a class qualifier parameter, sometimes the type of a field
+should have the same qualifier as the class qualifier parameter. To express
+this, annotate the field as with the polymorphic qualifier for the type system.
+
+\begin{Verbatim}
+@HasQualifierParameter(Tainted.class)
+class Buffer {
+  List<@PolyTainted String> strings;
+}
+\end{Verbatim}
+
+At a field access where the declared type of the field has a polymorphic
+qualifier, that polymorphic qualifier is instantiated to the qualifier on the
+type of the receiver of the field access (or in the case of type variables, the
+qualifier on the upper bound).
+
+\subsectionAndLabel{Inheritance of classes with a qualifier parameter}{class-qual-param-inheritance}
+
+If a class extends a \<@HasQualifierParameter> class (or implements a
+\<@HasQualifierParameter> interface), then that class must also be marked
+\<@HasQualifierParameter>. A particular subclass can specify which qualifier
+parameter should be used for the super class.  (This is similar to \<class
+StringList implements List<String> \{...\}>.) For example,
+
+\begin{Verbatim}
+  @@HasQualifierParameter(Tainted.class)
+  class Buffer {
+  void append(@PolyTainted Buffer this, @PolyTainted String s) { ... }
+  }
+  @@HasQualifierParameter(Tainted.class)
+  @Tainted class TaintedBuffer extends @Tainted Buffer {
+  @Override
+  void append(@Tainted Buffer this, @Tainted String s) { ... } // legal override
+  }
+\end{Verbatim}
+
+\<@Untainted TaintedBuffer> is an invalid type.
+
 
 % LocalWords:  nullable MyList nble nn Nullness DefaultQualifier MyClass quals
 % LocalWords:  DefaultLocation subtype's ImmutableList ListIterator nullness
