Escape curly braces. Fixes #2873.

--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -950,7 +950,7 @@ First, create the property in the \code{properties} section of the POM:
 <properties>
   <!-- These properties will be set by the Maven Dependency plugin -->
   <annotatedJdk>$\{org.checkerframework:jdk8:jar\}</annotatedJdk>
-  <errorProneJavac>${com.google.errorprone:javac:jar}</errorProneJavac>
+  <errorProneJavac>$\{com.google.errorprone:javac:jar\}</errorProneJavac>
 </properties>
 \end{alltt}
 
