--- a/docs/manual/interning-checker.tex
+++ b/docs/manual/interning-checker.tex
@@ -15,7 +15,7 @@ equality by permitting use of \code{==}.
 
 The Interning Checker prevents two types of problems in your code.
 First, it prevents using \code{==} on
-non-interned values, can result in subtle bugs.  For example:
+non-interned values, which can result in subtle bugs.  For example:
 
 \begin{Verbatim}
   Integer x = new Integer(22);
