--- a/docs/manual/generics.tex
+++ b/docs/manual/generics.tex
@@ -34,9 +34,10 @@ type-checker does, and makes the Checker Framework's warnings easier to
 understand.
 
 If your code uses raw types, then the Checker Framework will do its best to
-infer the Java type parameters and the type qualifiers.  By default these inferred
-types are ignored is subtyping checks. If you supply the command-line option \<-AignoreRawTypeArguments=false>
-you will see errors from raw types.
+infer the Java type parameters and the type qualifiers.  By default these
+inferred types are ignored is subtyping checks. If you supply the
+command-line option \<-AignoreRawTypeArguments=false> you will see errors
+from raw types.
 
 
 \subsectionAndLabel{Restricting instantiation of a generic class}{generics-instantiation}
