--- a/docs/manual/generics.tex
+++ b/docs/manual/generics.tex
@@ -517,8 +517,9 @@ To \emph{use} a polymorphic qualifier, just write it on a type.
 For example, you can write \<@PolyNull> anywhere in a method that you would write
 \<@NonNull> or \<@Nullable>.
 A polymorphic qualifier can be used in a method signature or body.
-It may not be used on a class.
-(It may be used on fields, see Section~\ref{class-qualifier-polymorphism}.)
+It may not be used on a class declaration.
+(It may be used on a field declaration, but it has a different meaning;
+see Section~\ref{class-qualifier-polymorphism}.)
 
 A method written using a polymorphic qualifier conceptually has multiple
 versions, somewhat like the generics feature of Java or a template in C++.
@@ -867,22 +868,20 @@ To add a qualifier parameter to a class, annotate its declaration with \refqualc
 class StringBuffer { ... }
 \end{Verbatim}
 
-\<@HasQualifierParameter> analogizes StringBuffer to a
-generic collection.  A qualifier on a use of StringBuffer itself is treated as
-appearing both on the StringBuffer and on its conceptual type argument.  That
+\<@HasQualifierParameter> analogizes \<StringBuffer> to a
+generic collection.  A qualifier on a use of \<StringBuffer> is treated as
+appearing both on the \<StringBuffer> and on its conceptual type argument.  That
 is:\\
 \begin{tt}
   @Tainted StringBuffer $\approx$ @Tainted Collection<@Tainted Character>\\
   @Untainted StringBuffer $\approx$ @Untainted Collection<@Untainted Character>
 \end{tt}
 
-Also, like a generic collection, invariant subtyping is used for occurrences of
-a type with a qualifier parameter:  no two occurrences of the type with
-different qualifiers have a subtyping relationship.
-
-In a type cast, if both the cast type and the type of casted expression have
-qualifier parameters, and if the qualifiers on the types are not equivalent,
-then the checker will issue an \<invariant.cast.unsafe> error.
+If two types have different qualifier arguments, they have no subtyping
+relationship.  (This is ``invariant subtyping'', also used by Java for
+generic classes.)  In particular, \<@Untainted StringBuffer> is not a
+subtype of \<@Tainted StringBuffer>; an attepmt to cast between them (in
+either direction) will yield an \<invariant.cast.unsafe> error.
 
 If a class extends a \<@HasQualifierParameter> class (or implements a
 \<@HasQualifierParameter> interface), then that class must also be marked
@@ -890,12 +889,12 @@ If a class extends a \<@HasQualifierParameter> class (or implements a
 
 \subsectionAndLabel{Using class qualifier parameters in method signatures}{class-qual-param-method}
 
-In classes with class qualifier parameters, a formal parameter type should
+In a class with a class qualifier parameter, a formal parameter type should
 sometimes have the same qualifier as the class qualifier parameter.  To express
 this, annotate both the receiver type and the parameter type with the
 polymorphic qualifier for the type system. For example,
 \begin{Verbatim}
-@@HasQualifierParameter(Tainted.class)
+@HasQualifierParameter(Tainted.class)
 class Buffer {
   void append(@PolyTainted Buffer this, @PolyTainted String s) { ... }
 }
@@ -906,7 +905,7 @@ other uses of \<@PolyTainted> are instantiated to the instantiation of
 
 \subsectionAndLabel{Using class qualifier parameters in the type of a field}{class-qual-param-field}
 
-In classes with a class qualifier parameter, sometimes the type of a field
+In a class with a class qualifier parameter, sometimes the type of a field
 should have the same qualifier as the class qualifier parameter. To express
 this, annotate the field as with the polymorphic qualifier for the type system.
 
@@ -942,8 +941,8 @@ qualifier on the upper bound).
 %  void append(@Tainted TaintedBuffer this, @Tainted String s) { ... } // legal override
 %  }
 %\end{Verbatim}
-
-\<@Untainted TaintedBuffer> is an invalid type.
+%
+% \<@Untainted TaintedBuffer> is an invalid type.
 
 
 % LocalWords:  nullable MyList nble nn Nullness DefaultQualifier MyClass quals
