--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
-The -AnoNullStringsConcatenation command-line argument assumes that every operand
-of a String concatenation can't be the "null" String at run-time.
+New command-line option `-AnoNullStringsConcatenation` unsoundly assumes
+that every operand of a String concatenation is non-null.
 
 ---------------------------------------------------------------------------
 
