--- a/docs/manual/annotating-libraries.tex
+++ b/docs/manual/annotating-libraries.tex
@@ -188,9 +188,9 @@ annotated.
 
 Whenever you annotate any part of a file, fully annotate the file!  That
 is, write annotations for all the methods and fields, based on their
-documentation.  If you don't annotate the whole file, then other people
-won't know whether a particular method is unannotated because you didn't
-get to it yet or because you decided that it didn't need any annotations.
+documentation.  If you don't annotate the whole file, then users may be
+surprised that calls to some methods type-check as expected whereas other
+methods do not (because they have not been annotated).
 
 
 \subsectionAndLabel{Verify your annotations}{library-tips-verify}
