--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -712,7 +712,10 @@ Type-checking modes:  enable/disable functionality
   Output suggested annotations for method signatures and fields.
   These annotations may reduce the number of type-checking
   errors when running type-checking in the future; see
-  Section~\ref{whole-program-inference}.
+  Section~\ref{whole-program-inference}. This argument optionally
+  takes an argument to specify the format of its output. By default,
+  it outputs to .jaif files. "-Ainfer=stubs" will cause it to write
+  its outputs to .astub files, instead.
 \item \<-AshowSuppressWarningKeys>
   With each warning, show all possible keys to suppress that warning.
 \item \<-AwarnUnneededSuppressions>
@@ -747,16 +750,16 @@ Partially-annotated libraries
 \item \<-AstubWarnIfRedundantWithBytecode>
   Warn if a stub file entry is redundant with bytecode information; see
   Section~\ref{stub-using}.
+\item \<-AmergeStubsWithSource>
+  If both a stub file and a source file for a class are available,
+  use the stronger type from the two. This flag overrides the default
+  behavior, which is to ignore the stub file.
 % This item is repeated above:
 \item \<-AuseDefaultsForUncheckedCode=source>
   Outside the scope of any relevant
   \refqualclass{framework/qual}{AnnotatedFor} annotation, use unchecked code
   default annotations and suppress all type-checking warnings; see
   Section~\ref{compiling-libraries}.
-\item \<-AmergeStubs>
-  If both a stub file and a source file for a class are available,
-  use the stronger type from the two. This flag overrides the default
-  behavior, which is to ignore the stub file.
 \end{itemize}
 
 Debugging
